--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  provider: ^4.3.2+2
+
   flutter_blue: ^0.7.3
+  crclib: ^2.0.0
 
 dev_dependencies:
   flutter_test:
