Prep for play store uploads

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="bldc_wizard"
-        android:icon="@mipmap/ic_launcher">
+        android:label="BLDC Wizard"
+        android:icon="@mipmap/launcher_icon">
 
         <activity
             android:name=".MainActivity"
